# stochasticsampling

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  make_documentation.sh  rustfmt.toml
crates/fftw3/: Cargo.toml  bindgen.sh  build.rs  test.rs
crates/fftw3/src/: complex.rs  cufftw_ffi.rs  fft.rs  fftw3_ffi_single.rs  fftw3_threads_ffi.rs  fftw_ndarray.rs  lib.rs
src/: cli.yml  consts.rs  distribution.rs  distribution_test.rs  init.rs  lib.rs  main.rs  output.rs  particle.rs  particle_test.rs  serialization_helper.rs  settings.rs  simulation.rs  test_helper.rs
src/coordinates/: mod.rs  modulofloat.rs  particle.rs  vector.rs
src/distribution/: density_gradient.rs  distribution_test.rs  mod.rs
src/fftw3/: Cargo.toml  complex.rs  fft.rs  fftw3.rs  fftw3_ffi.rs  fftw_ndarray.rs
src/fftw3/src/: complex.rs  fft.rs  fftw_ndarray.rs  lib.rs
src/flowfield/: mod.rs  spectral_solver.rs  spectral_solver_test.rs  stress.rs  stress_test.rs
src/integrators/: integrate.rs  integrate_test.rs  langevin_builder2_deleteme.rs  langevin_builder_deleteme.rs  mod.rs
src/integrators/langevin_builder/: mod.rs  mod_test.rs  modifiers.rs  modifiers_test.rs
src/integrators/langevin_old/: langevin_test.rs  mod.rs
src/magnetic_interaction/: magnetic_solver.rs  magnetic_solver_test.rs  mod.rs
src/mesh/: fft_helper.rs  fft_helper_test.rs  grid_width.rs  interpolate.rs  mod.rs
src/modulo/: mod.rs  modulofloat.rs  vector.rs
src/output/: mod.rs  path.rs  worker.rs
src/polarization/: director.rs  director_test.rs
src/random/: mod.rs
src/simulation/: distribution.rs  distribution_test.rs  grid_width.rs  integrator.rs  mod.rs  output.rs  output_builder.rs  particle.rs  settings.rs
src/simulation/flowfield/: mod.rs  spectral_solver.rs  spectral_solver_test.rs  stress.rs  stress_test.rs
src/simulation/integrators/: fft_helper.rs  flowfield.rs  fourieroseen.rs  fourieroseen3d.rs  integrate.rs  integrate_test.rs  langevin.rs  langevin_builder2.rs  langevin_test.rs  mesh.rs  mod.rs  oseen_conv.rs
src/simulation/integrators/langevin_builder/: mod.rs  mod_test.rs  modifiers.rs  modifiers_test.rs
src/simulation/integrators/langevin_old/: mod.rs
src/simulation/magnetic_interaction/: magnetic_solver.rs  magnetic_solver_test.rs  mod.rs
src/simulation/mesh/: fft_helper.rs  fft_helper_test.rs  grid_width.rs
src/simulation/polarization/: director.rs  director_test.rs
src/simulation/settings/: mod.rs  si.rs
src/simulation/vector/: mod.rs  vorticity.rs
src/simulation/vector_analysis/: mod.rs  vorticity.rs
src/utils/: mod.rs
src/vector/: mod.rs  vorticity.rs
test/: parameter.toml  parameter_no_defaults.toml  parameter_profiling.toml  parameter_si.toml  parameter_unused.toml  simpson.py
test/CI/: Dockerfile
test/control/: stress_kernel.bincode
test/flowfield/: ff_test.bincode  init_active.cbor  parameter_active.toml
test/magneticfield/: b_test.bincode
tools/: DataStreamer.py  README.md  create_ic.py  gauss_init.wl  gen_initial_condition.sh  parse_toml.py  reconstruct_parameter.toml.py  show_initial_condition.py  spathomdist_init.wl  viewer.py
