[package]
name = "stochasticsampling"
version = "1.5.4"
authors = ["fkoessel <fkoessel@uni-mainz.de>"]
build = "build.rs"
autobins = false

[features]
fftw-threaded = ["fftw3/fftw-threaded"]
fftw-static = ["fftw3/fftw-static"]

[[bin]]
name = "simulation"
path = "src/bin/main.rs"

[dependencies]
bincode = "1.0.0"
clap = { version = "2.30.0", features = ["yaml"] }
colored = "1.5.2"
env_logger = "0.5"
error-chain = "0.12.0"
fftw3 = { path = "crates/fftw3" }
itertools = "0.7"
log = "0.4"
ndarray = { version = "0.11.0", features = ["serde-1"] }
ndarray-parallel = "0.8.0"
num-complex = "0.1"
pbr = "1.0.0"
pcg_rand = { path = "crates/external/pcg_rand" }
quaternion = "0.3.0"
rand = "0.3.15"
rayon = "1.0.0"
rmp-serde = "0.13.6"
# rustfft = "2.0.0"
rust-lzma = "0.3.0"
serde = "1.0.10"
serde_cbor = "0.8.2"
serde_derive = "1.0.10"
serde_json = "1.0"
time = "0.1.35"
toml = { git = "https://github.com/alexcrichton/toml-rs", rev = "2be7ce9079fa02d9dd42958410ba1c40cef9811c" }
extprim = "1.4.0"
derive_more = "0.11.0"

[dev-dependencies]
quickcheck = "0.6"
ndarray-rand = "0.7.0"

[build-dependencies]
vergen = "0.1.1"

[workspace]
members = ["crates/fftw3", "crates/external/rust-lzma"]

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
incremental = false

[profile.bench]
lto = false
debug = true
opt-level = 3
codegen-units = 1
incremental = false
