[package]
name = "stochasticsampling"
version = "2.0.2-capped"
authors = ["fkoessel <fkoessel@uni-mainz.de>"]
build = "build.rs"
autobins = false
edition = "2018"

[features]
fftw-threaded = ["fftw3/fftw-threaded"]
fftw-static = ["fftw3/fftw-static"]

[[bin]]
name = "simulation"
path = "src/bin/main.rs"

[dependencies]
bincode = "1.0.1"
clap = { version = "2.32.0", features = ["yaml"] }
colored = "1.6.1"
env_logger = "0.6.0"
error-chain = "0.12.0"
fftw3 = { path = "crates/fftw3" }
itertools = "0.7"
log = "0.4"
ndarray = { version = "0.12.1", features = ["serde-1"] }
ndarray-parallel = "0.9.0"
num-complex = "0.2"
pbr = "1.0.1"
quaternion = "0.3.0"
rand = "0.6.1"
rand_pcg = { version = "0.1.1", features = ["serde1"] }
rayon = "1.0.3"
rmp-serde = "0.13.7"
# rustfft = "2.0.0"
rust-lzma = "0.4.0"
serde = "1.0.80"
serde_cbor = "0.9.0"
serde_derive = "1.0.80"
serde_json = "1.0"
time = "0.1.40"
toml = "0.4"
derive_more = "0.13.0"
ctrlc = "3.1.1"

[dev-dependencies]
quickcheck = "0.7"
ndarray-rand = "0.9.0"

[build-dependencies]
vergen = "2.0"

[workspace]
members = ["crates/fftw3"]

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
incremental = false

[profile.bench]
lto = false
debug = true
opt-level = 3
codegen-units = 1
incremental = false
