[package]
name = "stochasticsampling"
version = "2.1.0-rc5"
authors = ["fkoessel <fkoessel@uni-mainz.de>"]
build = "build.rs"
autobins = false
edition = "2018"

[features]
fftw-threaded = ["fftw3/fftw-threaded"]
fftw-static = ["fftw3/fftw-static"]
single = []

[[bin]]
name = "simulation"
path = "src/bin/main.rs"

[dependencies]
bincode = "1.1.2"
clap = { version = "2.32.0", features = ["yaml"] }
colored = "1.7.0"
env_logger = "0.6.1"
error-chain = "0.12.0"
fftw3 = { path = "crates/fftw3" }
itertools = "0.8.0"
log = "0.4"
lerp = "0.2.0"
ndarray = { version = "0.12.1", features = ["serde-1"] }
ndarray-parallel = "0.9.0"
num-traits = "0.2.6"
num-complex = "0.2"
pbr = "1.0.1"
quaternion = "0.3.1"
rand = "0.6.5"
rand_pcg = { version = "0.1.2", features = ["serde1"] }
rayon = "1.0.3"
rmp-serde = "0.13.7"
# rustfft = "2.0.0"
rust-lzma = "0.4.0"
serde = "1.0.89"
serde_cbor = "0.9.0"
serde_derive = "1.0.89"
serde_json = "1.0"
time = "0.1.42"
toml = "0.5.0"
derive_more = "0.14.0"
ctrlc = "3.1.1"

[dev-dependencies]
quickcheck = "0.8.2"
ndarray-rand = "0.9.0"
criterion = "0.2.10"

[build-dependencies]
vergen = "2.0"

[workspace]
members = ["crates/fftw3"]

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
incremental = false

[profile.bench]
lto = false
debug = true
opt-level = 3
codegen-units = 1
incremental = false
